--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -4,15 +4,7 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank">白宫请愿连署  将中共定为恐怖组织</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/8/13/n11450650.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/9ca38853a9d3c7fedfdac1e3ab308a9e-150x120.png" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 12:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank">世界各地景点上 那些中国人的故事</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/7/3/n11362476.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/313042_medium-150x120.jpg" align ="left"></a>有这样一群信仰“真、善、忍”的人们，他们遍布于世界各地，长年坚守在著名的风景点。他们的信息台、展板、横幅形成一道道独特的“风景点”，吸引了成千上万的大陆游客。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月05日 10:22 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/7/23/n11404210.md#1" target="_blank">期刊：《九评特刊》164期</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/7/23/n11404210.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/A4-164-1-150x120.jpg" align ="left"></a>
-
-跨页尺寸点击下载a3-164
-
-单页尺寸点击下载a4-164
-
-       
-
-&nbsp;......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年07月23日 8:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/9/2/n11492770.md#1" target="_blank">每日三退声明精选（2019/09/01）</a><br></h3>共匪从1949年窃国，到如今已经70年了，人们在共产党的邪恶统治下忍受了70年，抗日时，马被八路军以抗日的名义牵走，文革时，把毛邪灵供奉在墙上，真神的画像却丢掷一旁。毛不信神，却让人拜他，瞻仰他，毛向红卫兵高呼万岁，邪恶的共产党以此毒害了很多人，老一辈的长辈不愿谈起过去的事情，是因为现在邪党歪风横行，有价值的人，得不到释放，在牢狱中度过最美丽的年纪，没价值的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月02日 11:28 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/8/31/n11489622.md#1" target="_blank">每日三退声明精选（2019/08/30）</a><br></h3>从香港这个第一个采行一国两制的地方，我们看到了当共产党一步一步的渗透香港后，香港人的惊恐，他们从来没有生活在共产主义社会下，现在他们发觉一切都变了，也真正感受到失去了自由民主的可怕，我明白了共产党的邪恶，那么的隐蔽，背地里却做了那么多坏事，对国内大行封锁，这不是很可耻吗？还有谁想被骗？在此声明退出少先队、共青团、共产党，永远不再和中共邪党有任何瓜葛，期盼自由.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月31日 11:26 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/8/29/n11484716.md#1" target="_blank">每日三退声明精选（2019/08/28）</a><br></h3>我知道共产党的谎言建国、六四屠杀的罪恶，听说活摘器官的事情，我老家四川，三峡大坝切断龙脉，我老妈都知道。搞得我们四川总是地震泥石流。我退出少先队、红领巾，废除毒誓。法轮功学员信佛，说的是真话。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月29日 11:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/8/28/n11482270.md#1" target="_blank">每日三退声明精选（2019/08/27）</a><br></h3>在国内不知怎么退，只有来这里退。这个组织只为上级服务，缺少法治，缺少人性，缺少人权，与世界文明相悖而驰。这样的组织还要强硬地控制十多亿人。不想同流合污。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月28日 11:20 AM							</td></tr>
