--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/10/5/n11570031.md#1" target="_blank">朱婉琪：21世纪人类共同结束中共暴政</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/10/5/n11570031.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/12/PO_X5320-150x120.jpg" align ="left"></a>十一国殇日70周年，台湾法轮功人权律师团发言人朱婉琪表示，在中国大陆有三亿四千多万民众宣布退出共产党、共青团、少先队组织，而且去共化已成全球趋势。她呼吁，21世纪人类共同结束中共暴政。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月06日 3:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/10/5/n11569991.md#1" target="_blank">汪志远：全民反共反迫害开始了</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/10/5/n11569991.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/190426121648100699-150x120.jpg" align ="left"></a>10月1日是十一国殇日70周年，追查迫害法轮功国际组织主席汪志远，在法轮功反迫害20周年香港集会上录音发言说，在中国大陆有三亿四千多万民众宣布三退与中共决裂。在海外以美中贸易战为代表的全球去共排共大潮迅猛地掀起等，都表明全民反共反迫害开始了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 11:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/10/5/n11569920.md#1" target="_blank">易蓉：退党大潮为中华民族带来新生曙光</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/10/5/n11569920.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1907181621001973-150x120.jpg" align ="left"></a>2019年10月1日是十一国殇日70周年，全球退出中共服务中心主席易蓉，在法轮功反迫害20周年香港集会上录音发言表示，有三亿四千多万中国民众已选择唾弃中共，也标志着退党大潮正在为中华民族带来新生的曙光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 5:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/10/1/n11559279.md#1" target="_blank">中共窃政70年 中华儿女声明退党团少先队</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/10/1/n11559279.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/130518194335815-150x120.jpg" align ="left"></a>中共建政70周年之际，许多大陆民众看清了中共的真面目，不希望与中共捆绑、为伍作恶，纷纷在大纪元退党网站上声明退出中国共产党、团、少先队。该网站自2004年12月开通以来，已经累积了3亿4千多万人声明退出中共一切组织。一位不具名的红二代向大纪元表示，近期香港事件让人看出中共邪恶本质，是退党的催化剂。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年10月05日 2:32 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/5/n11633886.md#1" target="_blank">每日三退声明精选（2019/11/04）</a><br></h3>我以前入过团，因为执行计划生育政策无知地干了伤天理的事，无知中造了很多罪业。父亲是地下党，可是后来被共产党整，所以我看透了，共产党就是黑帮恶霸，从来都是祸害老百姓的，今天在此郑重声明：退出共产党的团、队组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月05日 11:15 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/4/n11631504.md#1" target="_blank">每日三退声明精选（2019/11/03）</a><br></h3>入队时小孩子无法自主，入团从未考虑，因为太多丑恶，入党为了养家糊口，但从未做过亏心事，一直与人为善，助人为乐，现为了家庭的将来，声明退党、退队。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月04日 11:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/2/n11629156.md#1" target="_blank">每日三退声明精选（2019/11/02）</a><br></h3>我是一名小食品经营者，眼下老百姓真的是太不容易了，我和老公一天只睡四个小时，从早忙到晚，也没啥积蓄，中共邪党的贪官一贪就是百万、千万的甚至上亿，老百姓咋办啊！在此，我声明退出中共邪党的少先队邪恶组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月03日 12:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/2/n11628455.md#1" target="_blank">每日三退声明精选（2019/11/01）</a><br></h3>年少时缺乏对世界的认知，被教唆下加入了共青团。年龄增长，接触到更多事物，渐渐了解到共产党及其相关组织邪恶的真实面目。作为具备公民意识的人，应当远离作恶的组织，在此，我谨代表我自己退出中国共青团。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月02日 12:40 PM							</td></tr>
