--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,26 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/liczai2340/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696111.md#1" target="_blank">高狄病亡 中共“吉林帮”日渐衰落</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696111.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/09/1509082158042039-150x120.jpg" align ="left"></a>中共吉林省委前书记高狄近期病亡。高曾因在“六四”后帮助江泽民对抗邓小平而获江信任，并乘机向江推荐了多名“吉林帮”成员。但习近平上台后，“吉林帮”一批成员被查，日渐衰落。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:42 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698068.md#1" target="_blank">李洪元被拘 华为拒道歉 更多员工冤情曝光</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1905241928522384-150x120.jpg" align ="left"></a>在华为员工因离职讨薪被拘押251天引爆舆论之后，华为周一（2日）发声明辩护并拒绝道歉，事件引发更多已离职员工挺身指控华为践踏人权、并导致众多无辜者入狱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687375.md#1" target="_blank">民企生存环境恶劣 浙商四次被掠夺财产（二）</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/28/n11687375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/S__13778976-1-150x120.jpg" align ="left"></a>浙江商人姜向前经营的南京瑞雪淀粉糖设备制造公司，历经客户拖欠货款，并且勾结公、检、法，谋划编制各种罪名实施诬告陷害，进而4次被掠夺财产。短短几年便被逼得破产倒闭。他感叹大陆民企生存环境恶劣，基层司法系统中周永康型“流毒”依然肆虐！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 2:22 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697897.md#1" target="_blank">加前副总理提与中共交换人质 专家称很危险</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697897.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/05082396-150x120.jpg" align ="left"></a>加拿大前自由党副总理、研科现任董事曼利（John Manley）近日表示，加拿大政府应与中共交换囚犯，才能让被中共关押的两名加拿大公民回国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:56 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698239.md#1" target="_blank">美国务院高官批中共：内政外交都倒行逆施</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698239.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1156013639-150x120.jpg" align ="left"></a>12月2日，美国务院负责东亚和太平洋事务的助理国务卿史达伟（David Stilwell）发表演说，批评中共在过去的20年里，在内政和外交领域的倒行逆施。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697873.md#1" target="_blank">港人身份变敏感？交银香港首席经济师被炒</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697873.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/140626080016100615-600x400-150x120.jpg" align ="left"></a>前中国（共）交通银行香港分部的首席经济学家罗家聪（Law Ka-Chung）近日向英媒透露，今年10月他无故被迫辞掉分行首席经济学家的职务，他指称该行这样做是因为他是香港人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:24 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698041.md#1" target="_blank">“自由之家”力挺港人 斥中共可耻</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698041.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-961899996-150x120.jpg" align ="left"></a>作为对中共“制裁”报复的回应，总部位于美国华盛顿的“自由之家”于周二（12月3日）发表声明指出，在过去几十年里，该组织致力维护全球各地民主与人权。为了履行这项使命，“自由之家”与争取自由的香港人民站在一起，呼吁北京遵守中英联合声明。“自由之家”依法做事，不需要得到中共的许可。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:18 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698082.md#1" target="_blank">更严制裁 传白宫拟将华为剔出美银行体系</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698082.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/060fab95ddbb0c11d145f09138cad61e-150x120.jpg" align ="left"></a>路透社周二（12月3日）援引三位消息人士的话称，美国今年稍早曾计划将中国电讯公司华为从美国银行体系中剔除，将其列入美国财政部的“指定制裁名单”（Specially Designated Nationals List, SDN）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:14 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698032.md#1" target="_blank">中疾控报告：内蒙肺鼠疫患者疑似感染源</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11698032.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-87219901-150x120.jpg" align ="left"></a>中国疾病预防控制中心（中疾控）披露，来自内蒙古的两例肺鼠疫夫妻患者，丈夫很可能在自家农场挖土时吸入带有鼠疫菌的气溶胶感染，妻子与丈夫接触而感染。另一名腺鼠疫患者给死野兔剥皮后被感染。前两例患者和第三例患者之间无流行病学关联。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 12:40 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697875.md#1" target="_blank">英议员促抹去香港警察协会王室相关头衔</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697875.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010520401501-150x120.jpg" align ="left"></a>香港警方过多使用武力的情况引起国际关注。英国多名国会议员及政界人物日前致信英国女王，要求抹去位于伦敦的“王家香港警察协会”的“王家”头衔及王冠徽章。信中批评香港警察配合政府打压异见，无差别使用武力镇压香港民主运动，而协会也站在警队一边，因此已不配使用王冠标志。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:59 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697489.md#1" target="_blank">中共拒美舰停港 专家：或助台美军事交流</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697489.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/413f33f09a1dbc76a995c905336bf096-150x120.jpg" align ="left"></a>中共外交部表示，将拒绝美国舰船和军机停靠香港的申请。有美国的军事专家分析，中共这么做，将会使得台湾与美国间的军事关系提升，美国将寻找更加可靠的补给港口，而台湾会是一个备受支持的选项。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:05 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697688.md#1" target="_blank">美大学生控告抖音海外版侵犯个资</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697688.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/000_1BM18F-150x120.jpg" align ="left"></a>一名来自加利福尼亚州的大学生起诉社交媒体“字节跳动”（ByteDance Inc.）抖音海外版——TikTok。原因是该公司在使用她的视频创建针对性广告在线个人资料时，将自己的个人信息秘密转移到了中国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:03 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697901.md#1" target="_blank">北约把目标从苏联转为中共 秘书长释因由</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697901.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1186259372-150x120.jpg" align ="left"></a>周二（12月3日），北约国家元首和政府首脑在英国举行为期两天的北约峰会，这是首次把中共威胁列入了北约议题，各国将会讨论” 中共军事和安全“等方面议题，美国总统川普（特朗普）也在会上谈论“中共威胁”。北约为何把对付的目标转向了中共？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:58 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697547.md#1" target="_blank">台退役中校涉中共间谍 检调求刑3年8个月</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697547.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191203000200M-150x120.jpg" align ="left"></a>台南地检署侦办共谍案，查出台湾工党主席郑昭明，涉嫌引介儿子、前军备局退休中校郑智文为中共发展组织，并赠予礼金、旅游补贴及手表给陈姓中校，意图吸收提供台湾军情，要求日后中共若武力犯台，以“北平模式”不抵抗策略处理，检调依《国安法》起诉郑姓父子，并求处郑昭明3年，郑智文3年8个月。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697712.md#1" target="_blank">川普：美中协议无最后期限 更愿大选后签单</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697712.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/01-20180323-Trump-SamiraBouaou-8329-2-150x120.jpg" align ="left"></a>美国总统川普（特朗普）周二（12月3日）在伦敦示意记者，与中方的贸易协议谈判没有最后期限，他宁可等到美国大选后再签协议。这番评论令外界对华盛顿和北京在几周内能够达成第一阶段协议的可能性产生怀疑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:31 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696610.md#1" target="_blank">【翻墙必看】林郑为何让习近平震惊？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010333492188-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.【独家】习近平震惊 林郑严重误判选情
+据接近中南海高层消息人士透露，香港区议会选举结果出炉，习近平感到震惊，建制派的几乎全军覆没，与特首林郑选前报告的“一定会赢”落差太大，中央一时拿不出政策，既定政策失算。
+
+2.贸易战下中国粮食危机 学者：恐爆政治动荡
+美中贸易战持续，中国可能出现比经济下行更棘手的粮.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696960.md#1" target="_blank">财务迅速恶化 香港航空营运现危机</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/6cab5d9587ecc1ad64bede18094da114-150x120.jpg" align ="left"></a>去年底已传出财务危机的香港航空（港航），12月2日收到港府的最后通牒。被要求在12月7日或之前资金及现金水平需符合规定，否则或撤销或暂时撤销其牌照。前政务司长唐英年急表态与港航割席。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 7:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697369.md#1" target="_blank">亲共人士在美驻港领事馆外抗议 引网民抨击</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-170261793-150x120.jpg" align ="left"></a>星期二（12月3日）中午，一群亲共人士在美国驻香港总领事馆外聚集，抗议美国总统川普（特朗普）签署《香港人权与民主法案》。与此同时，香港多区继续进行“反极权和你Lunch”活动，要求港府回应五大诉求。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 6:59 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695734.md#1" target="_blank">【独家】起底向心与中共军方的三大关系网</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695734.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20191127PHO0018l-600x400-150x120.jpg" align ="left"></a>前中共间谍王立强出逃澳洲后，其上司、香港中国创新投资公司（下称中国创新）董事会主席兼行政总裁向心也被推向舆论风口。王立强指控向心是中共高级特务，向心与中共军方的三大关系网也浮上台面。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 6:32 PM							</td></tr>
@@ -9,25 +31,9 @@
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697092.md#1" target="_blank">茅台今年已有8名前高管被调查或逮捕</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697092.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/03/1302191038192262-150x120.jpg" align ="left"></a>12月2日，贵州茅台前副总经理、茅台酒销售公司董事长王崇琳被起诉。而从今年5月起，茅台共有8名官员或落马、或逮捕、或起诉等。陆媒曾报导称，贵州多名官员因收受茅台、转卖茅台酒批条获利被查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 4:47 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697165.md#1" target="_blank">陆媒假新闻：俄图-160轰炸机狠甩美F-35战机</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697165.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1052110464-150x120.jpg" align ="left"></a>大陆新浪网在11月曾刊登一则美制F-35战机拦截俄制图-160轰炸机但被远远地甩开的新闻，此消息经大陆各网站转载，随后也传到外国网站。但经查核网站证实，这个由新浪网率先发布的消息，是精心捏造的假新闻。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 4:45 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696703.md#1" target="_blank">15年来首次 港府预计年底财政现赤字</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696703.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/191111103844100615-600x400-1-150x120.jpg" align ="left"></a>12月2日，香港财政司司长陈茂波表示，香港经济情况急剧恶化，预计截至2020年3月底的财政年度内，香港政府将出现财政赤字，这是15年以来首次。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696648.md#1" target="_blank">川普竞选品订单多 浙江义乌厂家：川普要赢</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696648.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/190302174642100699-150x120.jpg" align ="left"></a>美国大选牵动全世界的关注。2020年美国总统大选即将到来，美国现任总统川普（特朗普）在明年大选中能否成功连任，在浙江省义乌专做小商品的老板们根据订单中候选人宣传品的数量多少预测谁赢。有接单的义乌老板感慨，川普“又要赢了”！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:03 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696617.md#1" target="_blank">中共宣布两报复动作 美国务院国防部回应</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/photo_2019-11-28_21-27-10-150x120.jpg" align ="left"></a>美国总统川普（特朗普）上周三签署《香港人权与民主法案》后，中共周一（12月2日）宣布对美国采取两大报复动作。美国国务院官员表示，中共此举是为了转移对港人合法关切的注意力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 2:59 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696907.md#1" target="_blank">中共暂停美军舰机赴港 网民吐槽</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696907.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1064035474-1-150x120.jpg" align ="left"></a>针对美国总统川普（特朗普）签署《香港人权与民主法案》，中共在周一（12月2日）宣布暂停美军舰机停靠香港进行补给，以示报复。对此，网民纷纷加以调侃。有人说，这让香港没钱赚，应该是制裁香港吧？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 2:37 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696103.md#1" target="_blank">欠员工薪水3千万 大陆生鲜电商黑马临倒闭</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696103.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/VCG111260808070-150x120.jpg" align ="left"></a>继总部遭供应商围堵之后，曾是大陆生鲜电商“黑马”的 “呆萝卜”疑似爆雷、拖欠杭州300多位及合肥部分员工的工资。近日，呆萝卜杭州中心正式关闭。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 2:14 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696641.md#1" target="_blank">北大助理教授被举报与多人有不正当关系</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696641.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/35-150x120.jpg" align ="left"></a>12月2日，一位女生通过大陆微博举报北京大学数学中心博士生导师冯某与多名女子发生不正当关系。此消息虽遭到微博删除，但已被其他网民转载。当天，北京大学相关部门称已开始初查。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696474.md#1" target="_blank">海航系多只债券违约 融资10亿借新还旧</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696474.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/07/1803202337372662-150x120.jpg" align ="left"></a>海航系旗下主要航空上市公司海南航空控股股份有限公司11月30日发布公告表示，已经完成2019年第三期短期融资券发行，共融资10亿元人民币，用以偿还公司债务。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 12:40 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696630.md#1" target="_blank">华为手机法国开卖 无谷歌GMS恐不利销售</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696630.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/05/000_1GO4D3-150x120.jpg" align ="left"></a>华为手机 Mate 30 Pro 将于 12 月 9 日登陆法国，售价1,099欧元（约1,216美元），售卖只在华为官网进行。因该款手机中没有谷歌的GMS服务，被欧洲人称为“很贵的砖头”，其销售前景恐不乐观。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696287.md#1" target="_blank">高以翔骤逝事件为何令赵丽颖意外登上热搜？</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696287.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/01/zhaoliying-150x120.jpg" align ="left"></a>台湾艺人高以翔拍摄浙江卫视《追我吧》节目时骤逝，年仅35岁，令无数人唏嘘不已。在外界对事故的检视和反思中，大陆女星赵丽颖竟然因早前参加浙江卫视《跑男》节目时差点溺亡的情节登上热搜，并引发大陆作家刘信达在微博对赵丽颖喊话：“你敢不敢为高以翔讨回公道？”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:36 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696193.md#1" target="_blank">罗斯：若12月15日前没达协议 川普将加税</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696193.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Qingdao-port-1142161134-for-Selling-821-and-BW-652-150x120.jpg" align ="left"></a>在美国提高对中国商品关税之前，美中贸易谈判的时间不多了。美国商务部长罗斯周一（12月2日）表示，若美中没有在12月中旬达成协议，总统已明确表示将提高对中国进口产品的关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:49 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11689562.md#1" target="_blank">曾出资28万元为家乡修路 上海邓成联陷冤狱</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/11/29/n11689562.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/11-22-150x120.jpg" align ="left"></a>上海市闵行区法轮功学员邓成联于2018年3月被警察入室绑架、构陷，后被非法判刑4年、劫持入狱，在狱中长期绝食抗议。家人没有被告知他在哪个监狱，四处打听，没有任何信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:30 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696024.md#1" target="_blank">张宝华转发6人帮名单 揶揄官员回港共渡时艰</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696024.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/DSC_5208_meitu_1-150x120.jpg" align ="left"></a>美国总统川普（特朗普）感恩节前夕签署《香港人权与民主法案》，让参加逆权运动近半年的港人士气大振，纷纷期待被制裁名单出炉。前新闻主播张宝华在Facebook贴出“六人帮”名单，并揶揄出访英国时在人群中忽然失足受伤的律政司司长郑若骅“回港共渡时艰”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:22 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696142.md#1" target="_blank">中共制裁美人权组织 被指“雷声大雨点小”</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11696142.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010333252188-600x399-1-150x120.jpg" align ="left"></a>中共周一（12月2日）宣布对美国采取两大报复动作，被指雷声大雨点小；更有网民质疑，亲共的香港建制派拟巨资养落马“区议员”，是不是说明北京干预香港比谁都甚。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:13 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11693812.md#1" target="_blank">成龙代言杀手再添一笔 “香港航空”陷危机</a><br></h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/1/n11693812.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/chenglong-150x120.jpg" align ="left"></a>由成龙代言的“香港航空”（港航）日前出现严重的财务危机。香港空运牌照局12月2日表示，若港航未能在限期内按要求改善财务状况，当局将采取吊销牌照等进一步行动，有关决定最快将于7日前公布。有网民翻出过往资料后戏称，可能与“港航”找“品牌杀手”成龙宣传有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:09 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/2/n11695972.md#1" target="_blank">送辩护词遭枉判3年 辽宁孔繁校冤狱期满回家</a><br></h3>辽宁省抚顺市法轮功学员孔繁校，仅仅因给立案单位送辩护词就被非法判刑3年，羁押到辽宁省本溪监狱服刑，11月17日，3年冤狱期满才回到家中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:11 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697447.md#1" target="_blank">广西乡医称喝长生液活120岁 网民嘲讽</a><br></h3>近日大陆网传一张照片，一群穿着白大褂的医生围着一锅液体，横幅上写着“高手在民间 神方在乡里 广西宾阳乡医熬制长生液现场会 人类活到120岁不是神话”。此事引发网民热议，有网民讽刺：“特供，必须特供！”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 8:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697266.md#1" target="_blank">福建少女遭霸凌 被同学脱衣服搧耳光</a><br></h3>11月24日，福建中华技师学院，15岁女生小小（化名）被同学和其他几名女生在寝室扒光上衣、疯狂扇耳光、揪头发、辱骂，并被拍下视频。警方称，因涉事女生都是未成年人，无法拘留，校方则仍未做出回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 5:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11697025.md#1" target="_blank">北京顺义一豆馅厂房爆炸 4死10伤</a><br></h3>12月3日另成3时7分左右，北京顺义区牛栏山镇京日东大食品有限公司一加工豆馅厂房发生爆炸。截止目前，4人死亡10人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 3:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696821.md#1" target="_blank">南昌看守所满员 中共打黑被指制造恐怖气氛</a><br></h3>近日，江西省南昌市看守所羁押人员满了的消息在网路流传，消息指当地公安局因安全考量要求暂停夜间收押。外界分析认为，中共正在发起基层严打运动，不断制造社会矛盾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 2:31 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696856.md#1" target="_blank">张家口4分钟内两次地震 北京居民有震感</a><br></h3>12月3日，河北张家口市怀安县连续发生两次地震，一次2.9级，一次3.4级。不少北京网民表示有震感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 1:44 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696595.md#1" target="_blank">西安大妈趵突泉吐口水拍照 网民：没素质</a><br></h3>近日，在山东济南趵突泉景区，五位游玩的大妈，为了拍摄嘴巴喷水的一幕，集体向泉水吐口水，引来网民批评。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 11:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696580.md#1" target="_blank">每日三退声明精选（2019/12/02）</a><br></h3>看了大纪元的《九评共产党》感到非常的震惊，我为党工作了一生而且大部分工作都是从事党务工作，却不知它如此的邪恶，多可悲呀！现在我醒悟了，我不能做邪教的一份子，现在我郑重声明：退出共产党、共青团和少先队等一切邪恶组织，清除兽的印记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 10:46 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/19/12/3/n11696472.md#1" target="_blank">北京顺义一厂房发生爆炸 已致1死11伤</a><br></h3>今天（3日）凌晨，北京顺义区牛栏山镇有工厂发生爆炸，事故造成11人送医救治、2人失联、1人死亡，目前正调查爆炸原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月03日 9:41 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md#1<br><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/liczai2340/djy/blob/master/gb/nsc413_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_4.htm">http://www.epochtimes.com/gb/nsc413_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
